--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,29 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.firebase:firebase-auth:12.0.0'
+    implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+
+    //Contry Codes
+    implementation 'com.hbb20:ccp:2.1.4'
+
+    //Firebase Auth
+    compile 'com.firebaseui:firebase-ui-auth:3.2.2'
+
+    // Required only if Facebook login support is required
+    compile('com.facebook.android:facebook-android-sdk:4.27.0')
+
+    //Firebase Firestore Database
+    compile 'com.google.firebase:firebase-firestore:12.0.0'
 }
+
+
+
+
+apply plugin: 'com.google.gms.google-services'
