--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -22,7 +23,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.google.firebase:firebase-auth:12.0.0'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -41,8 +42,22 @@ dependencies {
     compile('com.facebook.android:facebook-android-sdk:4.27.0')
 
     //Firebase Firestore Database
-    compile 'com.google.firebase:firebase-firestore:12.0.0'
+    compile 'com.google.firebase:firebase-firestore:11.8.0'
+
+    //Recycler View with popup
+    compile 'com.simplecityapps:recyclerview-fastscroll:1.0.17'
+
+    //Circle Imageview
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+
+    //Card view
+    compile 'com.android.support:cardview-v7:26.1.0'
+
 }
+
 
 
 
