--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sahilj.mycontactlist">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Welcome"></activity>
+        <activity android:name=".Welcome" />
         <activity
             android:name=".SplashScreenActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
@@ -23,12 +24,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ContactAddActivity" android:parentActivityName=".Welcome"/>
+        <activity
+            android:name=".ContactAddActivity"
+            android:parentActivityName=".Welcome" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyD0iKDc85yDnB-ZgnWTBdH9Hd8FFtJzXfc"/>
-        <meta-data android:name="com.google.android.gms.version"
+            android:value="AIzaSyD0iKDc85yDnB-ZgnWTBdH9Hd8FFtJzXfc" />
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".DisplayContactActivity"
+            android:label="@string/title_activity_display_contact"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".Welcome"/>
     </application>
 
 </manifest>
