--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -38,8 +38,18 @@
         <activity
             android:name=".DisplayContactActivity"
             android:label="@string/title_activity_display_contact"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".Welcome"/>
+            android:parentActivityName=".Welcome"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"
+            android:parentActivityName=".Welcome"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.sahilj.mycontactlist.Welcome" />
+        </activity>
+        <activity android:name=".ContactsOnMapActivity" android:parentActivityName=".Welcome"/>
     </application>
 
 </manifest>
